<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/choice_grid"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:background="@color/white"
    app:alignmentMode="alignBounds"
    app:columnCount="4"
    app:rowCount="3"
    app:rowOrderPreserved="false"
    app:useDefaultMargins="true">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal">

        <ImageView
            style="@style/image_category"
            android:src="@drawable/ic_shang_yi" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/buy_goods_title_1" />

    </LinearLayout>


    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal">

        <ImageView
            style="@style/image_category"
            android:src="@drawable/ic_ku_zi" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/buy_goods_title_2" />

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal">

        <ImageView
            style="@style/image_category"
            android:src="@drawable/ic_qun_zi" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/buy_goods_title_3" />

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal">

        <ImageView
            style="@style/image_category"
            android:src="@drawable/ic_nei_yi" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/buy_goods_title_4" />

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal">

        <ImageView
            style="@style/image_category"
            android:src="@drawable/ic_nv_xie" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/buy_goods_title_5" />

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal">

        <ImageView
            style="@style/image_category"
            android:src="@drawable/ic_bao_baojpg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/buy_goods_title_6" />

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal">

        <ImageView
            style="@style/image_category"
            android:src="@drawable/ic_nan_you" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/buy_goods_title_7" />

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal">

        <ImageView
            style="@style/image_category"
            android:src="@drawable/ic_mei_zhuang" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/buy_goods_title_8" />

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal">

        <ImageView
            style="@style/image_category"
            android:src="@drawable/ic_pei_shi" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/buy_goods_title_9" />

    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal">

        <ImageView
            style="@style/image_category"
            android:src="@drawable/ic_mu_yin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/buy_goods_title_10" />

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal">

        <ImageView
            style="@style/image_category"
            android:src="@drawable/ic_jia_ju" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/buy_goods_title_11" />

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal">

        <ImageView
            style="@style/image_category"
            android:src="@drawable/ic_bai_huo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/buy_goods_title_12" />

    </LinearLayout>

</android.support.v7.widget.GridLayout>